feat: add css file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    Hello, Git!
+    <div class = "header_cv">
+    Header for the new CV
+    </div>
+    <div>
+        Almaz Vafin
+    </div>
+    <div>
+        <img src=".\images\Photo_CV.png">
+    </div>
 </body>
 </html>
