feat: add alt text to img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Almaz Vafin
     </div>
     <div>
-        <img src=".\images\Photo_CV.png">
+        <img src=".\images\Photo_CV.png" alt="Candidate_photo">
     </div>
 </body>
 </html>
