feat: add personal info

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <div>
         <img src=".\images\Photo_CV.png" alt="Candidate_photo">
     </div>
+    <div>
+        Tel: +79273028722
+        E-mail:ufa722@ya.ru
+    </div>
 </body>
 </html>
