feat: add favicon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>cv</title>
+    <link rel="stylesheet" href="style.css" >
+    <link rel="icon" href=".\assets\icons\favicon.ico" >
 </head>
 <body>
     <div class = "header_cv">
@@ -15,7 +16,7 @@
         Almaz Vafin
     </div>
     <div>
-        <img src=".\images\Photo_CV.png" alt="Candidate_photo">
+        <img src=".\assets\images\Photo_CV.png" alt="Candidate_photo">
     </div>
     <div>
         Tel: +79273028722
