--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href=".\assets\icons\favicon.ico" >
 </head>
 <body>
+    <div>текст</div>
     <div class = "header_cv">
     Header for the new CV
     </div>
