feat: add container div

--- a/index.html
+++ b/index.html
@@ -9,19 +9,37 @@
     <link rel="icon" href=".\assets\icons\favicon.ico" >
 </head>
 <body>
-    <div>текст</div>
-    <div class = "header_cv">
-    Header for the new CV
-    </div>
-    <div>
-        Almaz Vafin
-    </div>
-    <div>
-        <img src=".\assets\images\Photo_CV.png" alt="Candidate_photo">
-    </div>
-    <div>
-        Tel: +79273028722
-        E-mail:ufa722@ya.ru
-    </div>
+    <header>
+        <div class="container">
+
+
+        </div>
+
+    </header>
+
+    <main>
+        <div class="container">
+            <div>текст</div>
+            <div class = "header_cv">
+            Header for the new CV
+            </div>
+            <div>
+                Almaz Vafin
+            </div>
+            <div>
+                <img src=".\assets\images\Photo_CV.png" alt="Candidate_photo">
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div>
+                Tel: +79273028722
+                E-mail:ufa722@ya.ru
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
