--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 
     <main>
         <div class="container main-container">
-            <section class="section" >
-                <img src=".\assets\images\Photo_CV.png" alt="Candidate_photo">
-            </section>
-            <section class="section" id="profile">
-                <h1 class="section-title">Almaz Vafin</h1>
+            
+            <section class="section section-profile" id="profile">
+                <img src=".\assets\images\Photo_CV.png" alt class="section-profile-photo">
+               <div class="section-profile-title">
+                <h1 class="section-title main-title">Almaz Vafin</h1>
+                <h3 class="section-subtitle">Junior WEB Developer</h3>
+               </div>
+                
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
