feat: add new design

--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
+                <ul class="section-list">
+                    <li class="section-item contacts-item">
+                           Oktyabsrky, Russia
+                    </li>
+                    <li class="section-item contacts-item">
+                        Email: 
+                        <a href="Mailto:ufa722@ya.ru" title="email">ufa722@ya.ru</a>
+                    </li>
+                    <li class="section-item contacts-item">
+                        Github:
+                        <a href="https://github.com/AlmazVafin" title="github">AlmazVafin</a>
+                    </li>
+                    <li class="section-item contacts-item">
+                        Telegram:
+                        <a href="https://t.me/AlmazVafin" title="telegram">@AlmazVafin</a>
+                    </li>
+                    <li class="section-item contacts-item"></li>
+                </ul>
                 <ul>
                 <li>Tel: +79273028722</li>
                 <li>E-mail:ufa722@ya.ru</li>
