fix: change photo for logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container main-container">
             
             <section class="section section-profile" id="profile">
-                <img src="./assets/images/Photo_CV.png" alt class="section-profile-photo">
+                <img src="./assets/images/Photo_CV.jpg" alt class="section-profile-photo">
                <div class="section-profile-title">
                 <h1 class="section-title main-title">Almaz Vafin</h1>
                 <h3 class="section-subtitle">Junior WEB Developer</h3>
