--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
                     <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
                 </ul>
             </nav>
-            <div class="toggle">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-              </div>
+            
         </div>
 
     </header>
@@ -143,7 +139,7 @@
     <footer class="'footer">
         <div class="container footer-container">
            <div > © 2022 
-            <a href="https://github.com/AlmazVafin" class='github nav-link' title="github">AlmazVafin</a>
+            <a href="https://github.com/AlmazVafin" class='github nav-link' title="github">AlmazVafin Github</a>
            </div>
           <div class="rss-wrap"> <a href="https://rs.school/js/" class="rss" ><img src="./assets/images/rs_school_js.svg" alt="RSSchool"></a>
           </div>
