fix: delete spaces

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
-    <link rel="stylesheet" href="style.css" >
-    <link rel="icon" href="./assets/icons/favicon.ico" >
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/icons/favicon.ico">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
     <main>
         <div class="container main-container">
             <section class="section section-profile" id="profile">
-                <img src="./assets/images/Photo_CV.jpg" alt ="Photo_CV" class="section-profile-photo">
+                <img src="./assets/images/Photo_CV.jpg" alt ="Photo" class="section-profile-photo">
                <div class="section-profile-title">
                 <h1 class="section-title main-title">Almaz Vafin</h1>
                 <h3 class="section-subtitle">Junior WEB Developer</h3>
@@ -104,7 +104,7 @@
                     <h2 class="section-title">Projects</h2>
                     <ul class="section-item">
                         <li class="section list">
-                            <a href="https://almazvafin.github.io/rsschool-cv/" >RSSchool-cv</a>
+                            <a href="https://almazvafin.github.io/rsschool-cv/">RSSchool-cv</a>
                         </li>
                         <li class="section list"></li>
                     </ul>
@@ -112,7 +112,7 @@
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
                 <ul class="section-list">
-                    <li class="section-item">Higher Education 
+                    <li class="section-item">Higher Education
                         </li>
                     <li class="section-item">Ufa State Petroleum University (2009)
                         </li>
@@ -125,13 +125,13 @@
                     <li class="section-item">English Upper-intermediate</li>
                     <li class="section-item">10 Years of professional use</li>
                 </ul>
-            </section>          
+            </section>
         </div>
     </main>
-    <footer class="'footer">
+    <footer class="footer">
         <div class="container footer-container">
-           <div > © 2022 
-            <a href="https://github.com/AlmazVafin" class='github nav-link' title="github">AlmazVafin Github</a>
+           <div > © 2022
+            <a href="https://github.com/AlmazVafin" class="github nav-link" title="github">AlmazVafin Github</a>
            </div>
           <div class="rss-wrap"> <a href="https://rs.school/js/" class="rss" ><img src="./assets/images/rs_school_js.svg" alt="RSSchool"></a>
           </div>
