--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </li>
                     <li class="section-item contacts-item">
                         Discord:
-                        <a href="#" title="discord">AlmazVafin#4182</a>
+                        <a href="#"title="discord">AlmazVafin#4182</a>
                     </li>
                 </ul>
             </section>
@@ -87,7 +87,7 @@
                               width: 50
                             }
                           };
-                          alert( user.sizes.height );
+                          alert(user.sizes.height);
                     </code>
                 </pre>
             </section>
@@ -95,7 +95,7 @@
                 <h2 class="section-title">Courses</h2>
                 <ul class="section-list">
                     <li class="section-item">RSSchool Stage 0 (ongoing)</li>
-                    <li class="section-item">Freecodecamp Legacy Responsive Web Wesign(ongoing)</li>
+                    <li class="section-item">Freecodecamp Legacy Responsive Web Design(ongoing)</li>
                     <li class="section-item">Hexlet CSS basics</li>
                     <li class="section-item">Coursera Graphic Design (ongoing)</li>
                 </ul>
@@ -103,10 +103,10 @@
             <section class="section" id="projects">
                     <h2 class="section-title">Projects</h2>
                     <ul class="section-item">
-                        <li class="section list">
+                        <li class="section-list">
                             <a href="https://almazvafin.github.io/rsschool-cv/">RSSchool-cv</a>
                         </li>
-                        <li class="section list"></li>
+                        <li class="section-list"></li>
                     </ul>
             </section>
             <section class="section" id="education">
