--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
-                <ul class="section-list">
-                    <li class="section-item contacts-item">
+                <ul>
+                    <li class="section-item">
                            Oktyabsrky, Russia
                     </li>
-                    <li class="section-item contacts-item">
+                    <li class="section-item">
                         Email:
                         <a href="Mailto:ufa722@ya.ru" title="email">ufa722@ya.ru</a>
                     </li>
-                    <li class="section-item contacts-item">
+                    <li class="section-item">
                         Github:
                         <a href="https://github.com/AlmazVafin" title="github">AlmazVafin</a>
                     </li>
-                    <li class="section-item contacts-item">
+                    <li class="section-item">
                         Telegram:
                         <a href="https://t.me/AlmazVafin" title="telegram">@AlmazVafin</a>
                     </li>
-                    <li class="section-item contacts-item">
+                    <li class="section-item">
                         Discord:
                         <a href="#" title="discord">AlmazVafin#4182</a>
                     </li>
@@ -60,7 +60,7 @@
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
-                <ul class="section-list">
+                <ul>
                     <li class="section-item">A strong will to develop professional skills in the sphere of web development.</li>
                     <li class="section-item">Previously worked as Service engineer for a company which produced industrial equipment (flowmeters).</li>
                     <li class="section-item">Be the best version of yourself.</li>
@@ -68,7 +68,7 @@
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
-                <ul class="section-list">
+                <ul>
                     <li class="section-item">Git, Github (push, pull, commit, pull request)</li>
                     <li class="section-item">HTML - basics</li>
                     <li class="section-item">CSS - basics</li>
@@ -93,7 +93,7 @@
             </section>
             <section class="section" id="courses">
                 <h2 class="section-title">Courses</h2>
-                <ul class="section-list">
+                <ul>
                     <li class="section-item">RSSchool Stage 0 (ongoing)</li>
                     <li class="section-item">Freecodecamp Legacy Responsive Web Design(ongoing)</li>
                     <li class="section-item">Hexlet CSS basics</li>
@@ -103,15 +103,15 @@
             <section class="section" id="projects">
                     <h2 class="section-title">Projects</h2>
                     <ul class="section-item">
-                        <li class="section-list">
+                        <li>
                             <a href="https://almazvafin.github.io/rsschool-cv/">RSSchool-cv</a>
                         </li>
-                        <li class="section-list"></li>
+                        <li></li>
                     </ul>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
-                <ul class="section-list">
+                <ul>
                     <li class="section-item">Higher Education
                         </li>
                     <li class="section-item">Ufa State Petroleum University (2009)
@@ -121,7 +121,7 @@
             </section>
             <section class="section" id="languages">
                 <h2 class="section-title">Languages</h2>
-                <ul class="section-list">
+                <ul>
                     <li class="section-item">English Upper-intermediate</li>
                     <li class="section-item">10 Years of professional use</li>
                 </ul>
